--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             />
             <h3 class="trick__title">MOD+ ✽</h3>
             <span class="trick__subtitle">Rango</span>
-            <span class="trick__price">Uqst</span>
+            <span class="trick__price">homecris</span>
             <button class="button trick__button">
               <i class="bx bx-cart-alt trick__icon"></i>
             </button>
