--- a/index.html
+++ b/index.html
@@ -334,11 +334,11 @@
 
           <div class="trick__content">
             <img
-              src="assets/img/new2-img.png"
+              src="assets/img/belk.png"
               alt=""
               class="trick__img"
             />
-            <h3 class="trick__title">FURRY LEGENDARIO</h3>
+            <h3 class="trick__title">BELLAKO</h3>
             <span class="trick__subtitle">Rango</span>
             <span class="trick__price">$14.99</span>
             <button class="button trick__button">
