--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@
 
           <div class="trick__content">
             <img
-              src="assets/img/new1-img.png"
+              src="assets/img/fort.png"
               alt=""
               class="trick__img"
             />
-            <h3 class="trick__title">FURRY PRO</h3>
+            <h3 class="trick__title">FORT</h3>
             <span class="trick__subtitle">Rango</span>
             <span class="trick__price">$11.99</span>
             <button class="button trick__button">
