--- a/index.html
+++ b/index.html
@@ -306,11 +306,11 @@
 
           <div class="trick__content">
             <img
-              src="assets/img/new6-img.png"
+              src="assets/img/warr.png"
               alt=""
               class="trick__img"
             />
-            <h3 class="trick__title">FURRY</h3>
+            <h3 class="trick__title">WARRIOR</h3>
             <span class="trick__subtitle">Rango</span>
             <span class="trick__price">$7.99</span>
             <button class="button trick__button">
@@ -324,7 +324,7 @@
               alt=""
               class="trick__img"
             />
-            <h3 class="trick__title">FORT</h3>
+            <h3 class="trick__title">FORTALEZA</h3>
             <span class="trick__subtitle">Rango</span>
             <span class="trick__price">$11.99</span>
             <button class="button trick__button">
@@ -436,7 +436,7 @@
               <div class="new__content swiper-slide">
                 <div class="new__tag">Nuevo</div>
                 <img src="assets/img/new5-img.png" alt="" class="new__img" />
-                <h3 class="new__title">Cambio de Nombre</h3>
+                <h3 class="new__title">Agregarte un Icono</h3>
                 <span class="new__subtitle">Estilo</span>
 
                 <div class="new__prices">
