--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               alt=""
               class="trick__img"
             />
-            <h3 class="trick__title">FORTALEZA</h3>
+            <h3 class="trick__title">FORT</h3>
             <span class="trick__subtitle">Rango</span>
             <span class="trick__price">$11.99</span>
             <button class="button trick__button">
