--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="trick__container container grid">
           <div class="trick__content">
             <img
-              src="assets/img/mod.png"
+              src="assets/img/moder.png"
               alt=""
               class="trick__img"
             />
