--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
+              <a href="comandos.html" class="nav__link">Comandos</a>
+            </li>
+            <li class="nav__item">
               <a href="historia.html" class="nav__link">Historia</a>
             </li>
             <li class="nav__item">
